// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutLeadBlock tests should not render if no awardsAndCertificates assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Spec Test\\",\\"action\\":\\"test\\"}"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-44"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
      >
        <div
          class="PostItCard-module_PostItCard__h-kTp"
        >
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              Key Features
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Sample KF value
                    </p>
                  </div>
                </li>
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Sample KF value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Benefit 3 NO, Benefit 4 NO
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no guaranteesAndWarranties assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="Test Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h71/hf4/9021244014622/Test-Awardpng"
        />
      </div>
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Spec Test\\",\\"action\\":\\"test\\"}"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-24"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
      >
        <div
          class="PostItCard-module_PostItCard__h-kTp"
        >
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              Key Features
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Sample KF value
                    </p>
                  </div>
                </li>
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Sample KF value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Benefit 3 NO, Benefit 4 NO
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="Test Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h71/hf4/9021244014622/Test-Awardpng"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
      >
        <div
          class="PostItCard-module_PostItCard__h-kTp"
        >
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Benefit 3 NO, Benefit 4 NO
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="Test Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h71/hf4/9021244014622/Test-Awardpng"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
      >
        <div
          class="PostItCard-module_PostItCard__h-kTp"
        >
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no siderbar, keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no specification asset 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="Test Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h71/hf4/9021244014622/Test-Awardpng"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
      >
        <div
          class="PostItCard-module_PostItCard__h-kTp"
        >
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Benefit 3 NO, Benefit 4 NO
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          Long Dec System 2 NO
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="Test Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h71/hf4/9021244014622/Test-Awardpng"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should render 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          longDescription
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="Monier garanti 30 år"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="Test Award"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h71/hf4/9021244014622/Test-Awardpng"
        />
      </div>
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Spec Test\\",\\"action\\":\\"test\\"}"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
      >
        <div
          class="PostItCard-module_PostItCard__h-kTp"
        >
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              Key Features
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Sample KF value
                    </p>
                  </div>
                </li>
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Sample KF value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <ul
                class="IconList-module_IconList__KweQa"
              >
                <li
                  class="IconList-module_ListItem__WMqQr IconList-module_ListItem--isCompact__Um1fv"
                >
                  <div
                    class="IconList-module_icon__KKtTa"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="IconList-module_content__21w5w"
                  >
                    <p
                      class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                    >
                      Benefit 3 NO, Benefit 4 NO
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="PostItCard-module_section__sfiQz"
          >
            <h4
              class="MuiTypography-root Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="PostItCard-module_content__Bvxw0"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests specification section move up if no guaranteesAndWarranties and awardsAndCertificates assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <div
          class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          longDescription
        </div>
      </div>
      <div
        class="LeadBlock-module_LeadBlockContentSection__CUG63"
      >
        <h6
          class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Spec Test\\",\\"action\\":\\"test\\"}"
          href="test"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-84"
          >
            Spec Test
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
